fixed world. add details + submit

--- a/ASG3A/world/World.css
+++ b/ASG3A/world/World.css
@@ -32,3 +32,10 @@ body{
     padding: 20px;
     border-radius: 10px;
 }
+
+#obj{
+        background-color: #159ea3;
+        color: white;
+        padding: 20px;
+        border-radius: 10px;
+}
